# family-health-lake

./: .gitignore  README.md  local_backend.py  pyproject.toml  setup.cfg
config/environments/: dev.yaml
config/metric_mappings/: garmin_raw_json_metrics.yaml  garmin_weekly_rollup_metrics.yaml  tata_1mg_lab_metrics.yaml
config/taxonomies/: health_taxonomies.yaml
docs/: architecture.md  coach_layer.md  coding_agent_working_rules.md  dashboard_layer.md  data_model.md  ingestion_layer.md  intelligence_layer.md  product_concept.md  roadmap.md  traceability.md
docs/spikes/: garmin_cloud_fetch_proof.md  garmin_raw_json_to_observations.md  garmin_weekly_rollup_v0.md
schemas/bigquery/: 001_create_person.sql  002_create_source_document.sql  003_create_health_metric.sql  003_create_observation.sql  004_alter_health_metric_add_observation_id.sql  005_alter_observation_add_context_fields.sql  005_create_metric_trend.sql  006_create_alert.sql  007_create_insight.sql  008_create_v_thyroid_dashboard.sql  010_create_v_garmin_weekly_rollup.sql
schemas/csv/: health_metric.csv.schema.md  observation.csv.schema.md
scripts/admin/: scrub_person_bigquery_data.py
scripts/dashboard/: render_thyroid_dashboard_markdown.py
scripts/extraction/: extract_garmin_raw_json.py  extract_tata_1mg_lab_report.py
scripts/ingestion/: fetch_garmin_to_gcs.py  load_extracted_csvs_to_bigquery.py
scripts/spikes/: fetch_garmin_to_gcs.py
scripts/synthesis/: generate_garmin_weekly_rollup.py  generate_thyroid_intelligence.py
src/family_health_lake/: __init__.py  utils.py
src/family_health_lake/dashboard/: __init__.py  thyroid_markdown.py
src/family_health_lake/extraction/: __init__.py  garmin_raw_json.py  (+1 more)
tests/: test_extract_garmin_raw_json.py  test_extract_tata_1mg_lab_report.py  test_garmin_cloud_fetch.py  test_generate_garmin_weekly_rollup.py  test_generate_thyroid_intelligence.py  test_load_extracted_csvs_to_bigquery.py  test_local_backend.py  test_render_thyroid_dashboard_markdown.py  test_scrub_person_bigquery_data.py  test_thyroid_dashboard_fetcher.py
tests/fixtures/: tata_1mg_lab_report_duplicates_and_ranges_fake.txt  tata_1mg_lab_report_fake.txt  tata_1mg_lab_report_tsh_split_fake.txt  tata_1mg_lab_report_unmapped_and_noise_fake.txt
(+19 files in other folders)
