[build-system]
requires = []
build-backend = "local_backend"
backend-path = ["."]

[project]
name = "family-health-lake"
version = "0.1.0"
description = "Local extraction utilities for the family health lake."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
bigquery = [
    "google-cloud-bigquery>=3,<4",
    "PyYAML>=6,<7",
]
garmin = [
    "garminconnect>=0.3.6,<0.4",
    "curl_cffi>=0.7,<1",
    "google-cloud-storage>=2,<4",
]
pdf = [
    "PyMuPDF>=1.24,<2",
]
test = [
    "pytest>=8,<9",
]

[project.scripts]
extract-tata-1mg-lab-report = "family_health_lake.extraction.tata_1mg_lab_report:main"
