[metadata]
name = family-health-lake
version = 0.1.0
description = Local extraction utilities for the family health lake.

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
include = family_health_lake*

[options.entry_points]
console_scripts =
    extract-tata-1mg-lab-report = family_health_lake.extraction.tata_1mg_lab_report:main

[options.extras_require]
pdf =
    PyMuPDF>=1.24,<2
test =
    pytest>=8,<9
